--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile "com.android.support:cardview-v7:${supportLibraryVersion}"
     compile "com.android.support:support-annotations:${supportLibraryVersion}"
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile "com.facebook.stetho:stetho:1.3.0"
 
     testCompile "junit:junit:${junitVersion}"
 
