--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile "com.android.support:support-annotations:${supportLibraryVersion}"
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile "com.facebook.stetho:stetho:1.3.0"
+    compile "com.squareup.okhttp3:okhttp:3.0.1"
 
     testCompile "junit:junit:${junitVersion}"
 
