--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,9 +35,7 @@
                 android:value="barqsoft.footballscores.MainActivity" />
         </activity>
 
-
-        <!--<service android:name=".service.FetchService" />-->
-
+        <!--Sync-->
         <service android:name=".sync.AuthenticatorService">
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator" />
@@ -62,9 +60,27 @@
         <provider
             android:name=".data.ScoresProvider"
             android:authorities="@string/authority"
-            android:exported="false"
+            android:exported="true"
             android:syncable="true" />
 
-    </application>
+        <!--Widget-->
+        <receiver
+            android:name=".widget.WidgetProvider"
+            android:exported="true"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="barqsoft.footballscores.ACTION_DATA_UPDATED" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_info" />
+        </receiver>
 
+        <service
+            android:name=".widget.WidgetService"
+            android:exported="false"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
+    </application>
 </manifest>
