--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,7 @@ dependencies {
     compile "com.android.support:support-annotations:${supportLibraryVersion}"
     compile "com.facebook.stetho:stetho:1.3.0"
     compile "com.squareup.okhttp3:okhttp:3.0.1"
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile files('libs/androidsvg-1.2.1.jar')
+    compile 'com.squareup.picasso:picasso:2.5.2'
 
     testCompile "junit:junit:${junitVersion}"
 
